Updated data in tables

--- a/index.html
+++ b/index.html
@@ -545,6 +545,15 @@
                     2016-2017
                   </td>
                   <td class="fifteen">
+                    243
+                  </td>
+                </tr>
+
+                <tr>
+                  <td class="fifteen">
+                    2017-2018
+                  </td>
+                  <td class="fifteen">
                     N/A
                   </td>
                 </tr>
@@ -608,6 +617,15 @@
                 <tr>
                   <td class="fifteen">
                     2016-2017
+                  </td>
+                  <td class="fifteen">
+                    73.25%
+                  </td>
+                </tr>
+
+                <tr>
+                  <td class="fifteen">
+                    2017-2018
                   </td>
                   <td class="fifteen">
                     N/A
