Change log comment

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     yr1819wks.push(data.feed.entry[i].gsx$rctbw_6.$t);
                   }
                 }
-                console.log("Writing yr1213wks, ignoring the rest of the data:\n");
+                console.log("Writing yr1213wks, ignoring the rest of the years:\n");
                 console.log(yr1213wks);
               }
               makeYears();
