--- a/index.html
+++ b/index.html
@@ -54,10 +54,14 @@
               // Make sure it is public or set to Anyone with link can view
               var rurl = "https://spreadsheets.google.com/feeds/list/" + spreadsheetID + "/od6/public/values?alt=json";
 
-              // Spreadsheet data request
-              // src: https://spreadsheets.google.com/feeds/list/1GuECV6Ot60h-Qab3e9-KPaKLdgXB3reoyZgo3VTlO_w/od6/public/values?alt=json
+              /* Spreadsheet data request
+              *  src: https://spreadsheets.google.com/feeds/list/1GuECV6Ot60h-Qab3e9-KPaKLdgXB3reoyZgo3VTlO_w/od6/public/values?alt=json
+              *  For more info, research "javascript http request objects"
+              */
+              // Define/instantiate a request object
               var request = new XMLHttpRequest();
-              // Open the URL: rurl
+
+              // Use request object to open the URL: rurl
               request.open('GET', rurl, true);
 
               // When it loads, format it.
