slight mod to comment

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             ////////////////////////////////////////////////////////////
 
             function formatData(data) {
-              console.log("Retrieved spreadsheet data:\n");
+              console.log("Retrieved spreadsheet data in JSON format:\n");
               console.log(data);
               var week;
               // Arrays for week data
